--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -1,11 +1,35 @@
 <div class="popover lighthouse-count" tabindex="-1" ng-show="player.lighthouse.accountCount">
   <div class="arrow"></div>
+  <!--<h3 class="popover-title">Year Two</h3>-->
+  <div class="popover-content">
+    <table>
+      <tr>
+        <th></th>
+        <th>Year 2</th>
+        <th>Year 1</th>
+      </tr>
+      <tr>
+        <td class="left">Account</td>
+        <td ng-bind="player.lighthouse.accountCount"></td>
+        <td ng-bind="player.lighthouse.accountCount"></td>
+      </tr>
+      <tr>
+        <td class="left">Character</td>
+        <td ng-bind="player.lighthouse.characterCount"></td>
+        <td ng-bind="player.lighthouse.characterCount"></td>
+      </tr>
+    </table>
+    <div class="incomplete-warning">Year 1 data collection is in progress.</div>
+  </div>
+</div>
+
+<!--<div class="popover lighthouse-count" tabindex="-1" ng-show="player.lighthouse.accountCount">
+  <div class="arrow"></div>
   <h3 class="popover-title">Year Two</h3>
   <div class="popover-content">
     <div class="count">Account: <span ng-bind="player.lighthouse.accountCount"></span></div>
     <div class="count">Character: <span ng-bind="player.lighthouse.characterCount"></span></div>
   </div>
-</div>
-
+</div>-->
 
 <!--data-content="Account: {{player.lighthouse.accountCount}}<br>Character: {{player.lighthouse.characterCount}}"-->
