--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -1,9 +1,9 @@
-<div class="popover lighthouse-count" tabindex="-1" ng-show="player.longestStreak">
+<div class="popover longest-streak" tabindex="-1" ng-show="player.longestStreak">
   <div class="arrow"></div>
   <h3 class="popover-title">Longest Streak</h3>
   <div class="popover-content">
-    <div class="count">Account: <span ng-bind="player.longestStreak.accountStreak"></span></div>
-    <div class="count">Character: <span ng-bind="player.longestStreak.characterStreak"></span></div>
+    <div class="count">Account <span ng-bind="player.longestStreak.accountStreak"></span></div>
+    <div class="count">Character <span ng-bind="player.longestStreak.characterStreak"></span></div>
   </div>
 </div>
 
