Popover + weapon tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
     <script src="bower_components/angulartics/src/angulartics-intercom.js"></script>
     <script src="bower_components/angulartics/src/angulartics-inspectlet.js"></script>
     <script src="bower_components/angulartics/src/angulartics-newrelic-insights.js"></script>
-    <script src="bower_components/angulartics-google-analytics/lib/angulartics-google-analytics.js"></script>
+    <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
