cleanup popovers, minor changes, y1 collection notice added

--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -1,6 +1,6 @@
-<div class="popover longest-streak" tabindex="-1" ng-show="player.longestStreak">
+<div class="popover" tabindex="-1" ng-show="player.longestStreak">
   <div class="arrow"></div>
-  <h3 class="popover-title">Longest win streak</h3>
+  <h3 class="popover-title">Longest Win Streak</h3>
   <div class="popover-content">
     <div class="row row--small-gutter">
       <div class="col-xs-6 stat">
@@ -14,6 +14,3 @@
     </div>
   </div>
 </div>
-
-
-<!--data-content="Account: {{player.lighthouse.accountCount}}<br>Character: {{player.lighthouse.characterCount}}"-->
