--- a/app/shared/popovers/gggElo.popover.html
+++ b/app/shared/popovers/gggElo.popover.html
@@ -7,7 +7,7 @@
         <label>Tier</label>
       </div>
       <div class="col-xs-6 stat">
-        <span ng-bind="player.ggg.rank === 'Placing' ? '-' : player.ggg.rank"></span>
+        <span ng-bind="player.ggg.rank"></span>
         <label>Rank</label>
       </div>
     </div>
