--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -1,6 +1,5 @@
 <div class="popover" tabindex="-1" ng-show="player.lighthouse.accountCount">
   <div class="arrow"></div>
-  <!--<h3 class="popover-title">Year Two</h3>-->
   <div class="popover-content">
     <div class="row">
       <div class="col-xs-6">
@@ -35,15 +34,7 @@
       </div>
     </div>
   </div>
-</div>
-
-<!--<div class="popover lighthouse-count" tabindex="-1" ng-show="player.lighthouse.accountCount">
-  <div class="arrow"></div>
-  <h3 class="popover-title">Year Two</h3>
-  <div class="popover-content">
-    <div class="count">Account: <span ng-bind="player.lighthouse.accountCount"></span></div>
-    <div class="count">Character: <span ng-bind="player.lighthouse.characterCount"></span></div>
+  <div class="popover-footer text-center">
+    Year 1 data collection is in progress.
   </div>
-</div>-->
-
-<!--data-content="Account: {{player.lighthouse.accountCount}}<br>Character: {{player.lighthouse.characterCount}}"-->
+</div>
