--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -1,7 +1,9 @@
 <div class="popover" tabindex="-1" ng-show="player.longestStreak">
   <div class="arrow"></div>
-  <h3 class="popover-title">Longest Win Streak</h3>
   <div class="popover-content">
+    <div class="stat__header">
+      Longest Win Streak
+    </div>
     <div class="row row--small-gutter">
       <div class="col-xs-6 stat">
         <span ng-bind="player.longestStreak.accountStreak"></span>
@@ -13,4 +15,7 @@
       </div>
     </div>
   </div>
+  <!--<div class="popover-footer text-center">
+    Longest Win Streak
+  </div>-->
 </div>
