--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -8,7 +8,7 @@
       <div class="modal-hero" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[mapInfo.referenceId].pgcrImage + ')'}">
         <div style="width: 100%;">
           <div class="modal-hero__title" ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></div>
-          <div class="modal-hero__label" ng-bind="(trialsInProgress ? 'This' : 'Last') + ' week\'s map'"></div>
+          <div class="modal-hero__label" ng-bind="mapInfo.weekText"></div>
         </div>
         <div class="modal-stats">
           <div class="modal-hero__stats" ng-bind="mapInfo.timeAgo"></div>
