--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -23,7 +23,7 @@
         <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
       </svg>
       <div class="modal-text">
-        <div class="row" ng-if="false">
+        <!--<div class="row">
           <div class="col-xs-6 col-md-3 stat">
             <span ng-bind="mapInfo.timeAgo"></span>
             <label>Last time in Trials</label>
@@ -41,7 +41,7 @@
             <label>Total Kills</label>
           </div>
         </div>
-        <hr ng-if="false">
+        <hr>-->
         <div class="row">
           <div class="col-xs-12 col-sm-5" ng-repeat="(key, weapons) in weaponSummary track by $index" ng-class="{'col-sm-offset-1': $index > 0}">
             <div class="top-weapons--map">
@@ -71,8 +71,8 @@
             </div>
           </div>
         </div>
-        <hr>
-        <div class="row" ng-if="false">
+        <!--<hr>
+        <div class="row">
           <div class="col-xs-12 col-sm-6" ng-repeat="type in [gggModal[platformNumeric].primary,
                                      gggModal[platformNumeric].special] track by $index">
             <div class="row top-weapon" ng-repeat="weapon in type track by $index" ng-if="$index < 5">
@@ -86,7 +86,7 @@
             </div>
             <hr class="visible-xs" ng-if="$index === 0">
           </div>
-        </div>
+        </div>-->
         <hr>
         <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></span>, compared to all maps</div>
         <!--<hr>-->
