--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -79,6 +79,8 @@
             <hr class="visible-xs" ng-if="$index === 0">
           </div>
         </div>
+        <hr>
+        <div class="faded">Weapon usage on this map compared to all maps</div>
         <!--<hr>-->
         <!--<div class="row">-->
           <!--<div class="col-xs-5 stat">-->
