--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <hr>
-        <div class="faded">Weapon usage during Trials on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></span>, compared to all maps</div>
+        <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></span>, compared to all maps</div>
         <!--<hr>-->
         <!--<div class="row">-->
           <!--<div class="col-xs-5 stat">-->
