--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -10,10 +10,10 @@
           <div class="modal-hero__title" ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></div>
           <div class="modal-hero__label" ng-bind="mapInfo.weekText"></div>
         </div>
-        <div class="modal-stats">
-          <div class="modal-hero__stats" ng-bind="mapInfo.timeAgo"></div>
-          <div class="modal-hero__description" ng-bind="trialsInProgress ? 'Trials Ends' : 'Last time in Trials'"></div>
-        </div>
+        <!--<div class="modal-stats">-->
+          <!--<div class="modal-hero__stats" ng-bind="mapInfo.timeAgo"></div>-->
+          <!--<div class="modal-hero__description" ng-bind="trialsInProgress ? 'Trials Ends' : 'Last time in Trials'"></div>-->
+        <!--</div>-->
         <div class="modal-stats">
           <div class="modal-hero__stats" ng-bind="mapInfo.lighthouse | number"></div>
           <div class="modal-hero__description">Flawless runs</div>
