--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -64,7 +64,8 @@
                   <span ng-bind="weapon.killPercentage | number:2"></span>%
                 </div>
                 <div class="col-xs-3 col-sm-4 stat" ng-class="{'success': weapon.diffPercentage > 0, 'fail': weapon.diffPercentage < 0}">
-                  <i class="material-icons"> {{weapon.diffPercentage > 0 ? '&#xE5CE;' : '&#xE5CF;'}} </i> <span ng-bind="weapon.diffPercentage | number:2"></span>%
+                  <i class="material-icons" ng-bind="weapon.diffPercentage > 0 ? '&#xE5CE;' : '&#xE5CF;'"></i>
+                  <span ng-bind="weapon.diffPercentage | number:2"></span>%
                 </div>
               </div>
               <hr class="visible-xs" ng-if="$index === 0">
@@ -88,7 +89,7 @@
           </div>
         </div>-->
         <hr>
-        <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name"></span>, compared to all maps</div>
+        <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name || 'the current map'"></span>, compared to all maps</div>
         <!--<hr>-->
         <!--<div class="row">-->
           <!--<div class="col-xs-5 stat">-->
