--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -89,7 +89,7 @@
           </div>
         </div>-->
         <hr>
-        <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name || 'the current map'"></span>, compared to all maps</div>
+        <div class="faded text-center">Weapon usage during Trials of Osiris on <span ng-bind="DestinyCrucibleMapDefinition[mapInfo.referenceId].name || 'this map'"></span>, compared to all maps</div>
         <!--<hr>-->
         <!--<div class="row">-->
           <!--<div class="col-xs-5 stat">-->
