replace blog with other content, minor updates and cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
     <script src="shared/definitions/en/DestinySubclassDefinition.js"></script>
     <script src="shared/definitions/en/DestinyWeaponDefinition.js"></script>
     <script src="shared/definitions/en/DestinyTalentGridDefinition.js"></script>
+    <script src="shared/definitions/KdPerHourChartData.js"></script>
     <script src="assets/js/$QDecorator.js"></script>
     <script src="app.module.js"></script>
     <script src="app.routes.js"></script>
