no longer in progress!

--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div class="popover-footer text-center" ng-if="player.lighthouse.years[1]">
+  <!--<div class="popover-footer text-center" ng-if="player.lighthouse.years[1]">
     Year 1 data collection is in progress.
-  </div>
+  </div>-->
 </div>
