finalize no stat, fix safari issue and android browser

--- a/app/shared/modals/faq.modal.html
+++ b/app/shared/modals/faq.modal.html
@@ -4,12 +4,16 @@
     <p class="faq-modal__answer">Not for the time being, but you can achieve a native app feeling by <a href="http://www.howtogeek.com/196087/how-to-add-websites-to-the-home-screen-on-any-smartphone-or-tablet/" target="_blank">adding this webpage to your homescreen</a>.</p>
   </div>
   <div class="faq-modal__container">
+    <p class="faq-modal__question">Why did my flawless count not update?</p>
+    <p class="faq-modal__answer">Flawless count is based on lighthouse visits per character per week, this is the only way we cna do it.</p>
+  </div>
+  <div class="faq-modal__container">
     <p class="faq-modal__question">Why don't you support other game modes like Skirmish, for example?</p>
     <p class="faq-modal__answer">Bungie does not let us see the current fireteam you're matched with. We're considering it, but it would likely require manual entry of player names.</p>
   </div>
   <div class="faq-modal__container">
     <p class="faq-modal__question">What data do you store on your servers?</p>
-    <p class="faq-modal__answer">We don't store any data at all. Everything you see is loaded directly from Bungie!</p>
+    <p class="faq-modal__answer">We store only Trials data, this includes individual players, the matches they played and weapons they have killed with</p>
   </div>
   <div class="faq-modal__container">
     <p class="faq-modal__question">This is so awesome that I'm throwing money at my screen. Is there something wrong?</p>
