updated error handling and add fallback url to api name search

--- a/app/shared/modals/faq.modal.html
+++ b/app/shared/modals/faq.modal.html
@@ -5,7 +5,7 @@
   </div>
   <div class="faq-modal__container">
     <p class="faq-modal__question">Why did my flawless count not update?</p>
-    <p class="faq-modal__answer">Flawless count is based on lighthouse visits per character per week, this is the only way we cna do it.</p>
+    <p class="faq-modal__answer">Flawless count is based on lighthouse visits per character per week, this is the only way we can do it.</p>
   </div>
   <div class="faq-modal__container">
     <p class="faq-modal__question">Why don't you support other game modes like Skirmish, for example?</p>
