add win % to this week win/loss stats popover and reposition it

--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -5,11 +5,15 @@
       This Week
     </div>
     <div class="row row--small-gutter">
-      <div class="col-xs-6 stat">
+      <div class="col-xs-5 stat">
+        <span ng-bind="100 * player.currentWeek.wins / player.currentWeek.matches | number:0"></span>%
+        <label>Percent</label>
+      </div>
+      <div class="col-xs-3 stat">
         <span ng-bind="player.currentWeek.wins"></span>
         <label>Wins</label>
       </div>
-      <div class="col-xs-6 stat">
+      <div class="col-xs-4 stat">
         <span ng-bind="player.currentWeek.losses"></span>
         <label>Losses</label>
       </div>
