GDSF popover styling, tried accessible popover

--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
     <script src="shared/directives/mobileClick.directive.js"></script>
     <script src="shared/directives/xpull.directive.js"></script>
     <script src="shared/directives/caroussel.directive.js"></script>
+    <script src="shared/directives/accessiblePopover.directive.js"></script>
     <script src="shared/filters/orderObjectBy.filter.js"></script>
     <script src="shared/filters/secondsToDateTime.filter.js"></script>
     <!-- endbuild -->
