add endpoint for charity icon

--- a/app/shared/popovers/charity1.popover.html
+++ b/app/shared/popovers/charity1.popover.html
@@ -1,7 +1,7 @@
 <div class="popover" tabindex="-1">
   <div class="arrow"></div>
   <div class="popover-content">
-    <p>Donated to <a href="https://www.twitch.tv/Sneakerheadbsj" target="_blank">SneakerheadBSJ's</a> 24h Charity Stream to support the <a href="http://www.globaldownsyndrome.org/" target="_blank">Global Down Syndrome Foundation</a>. Awesome!</p>
-		<a href="http://www.globaldownsyndrome.org/" target="_blank"><img src="/assets/img/gdsf-logo.gif" title="Global Down Syndrome Foundation"></a>
+    <p ng-bind="hazard.description"></p>
+		<a href="http://www.globaldownsyndrome.org/" target="_blank"><img src="{{hazard.icon}}" title="Global Down Syndrome Foundation"></a>
   </div>
 </div>
