--- a/app/shared/modals/map.modal.html
+++ b/app/shared/modals/map.modal.html
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <img class="img-responsive" ng-src="{{currentMap.mapImage}}" alt="Map">
+    <img class="img-responsive" ng-src="{{currentMapInfo.mapImage}}" alt="Map">
   </div>
 </div>
